<resources>
    <string name="app_name">SEE RED</string>
    <string name="action_settings">Settings</string>
    <string name="points_3">+3 points</string>
    <string name="points_2">+2 points</string>
    <string name="points_1">Free throw</string>
    <string name="reset">reset</string>
    <string name="home_team">Chicago Bulls</string>
    <string name="away_team">Away</string>
</resources>
